Fix rain chance line wrap bug

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -294,9 +294,14 @@ img {
 }
 
 @media (max-width: 600px) {
-  .hour-displays-container,
+  .hour-displays-container {
+    grid-template-columns: repeat(48, 6.5em);
+    grid-column-gap: .5em;
+    padding: 0 1em .5em;
+  }
+
   .day-displays-container {
-    grid-template-columns: repeat(48, 6em);
+    grid-template-columns: repeat(8, 6.5em);
     grid-column-gap: .5em;
     padding: 0 1em .5em;
   }
